<resources>
    <string name="app_name">Notes</string>
    <string name="title_hint">Title</string>
    <string name="content_hint">Content</string>
    <string name="default_transition_name">default</string>
    <string name="search_transition_name" translatable="false">search</string>

    <!--Labels-->
    <string name="label_ok">OK</string>
    <string name="label_successful_deleted">Successful deleted</string>
    <string name="label_successful_canceled">It\'s canceled</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_be_soon">Be available soon</string>
    <string name="label_grid">Grid</string>
    <string name="label_linear">Linear</string>
    <string name="add_note">Add Note</string>
    <string name="style">Style</string>
    <string name="label_bottom_menu_delete">"   "Delete</string>
    <string name="label_toolbar_search">search</string>
    <string name="label_edit">Edit</string>
    <string name="label_search">Search</string>
    <string name="label_settings">Settings</string>
    <string name="label_folders">Folders</string>
    <string name="label_help">Help</string>
    <string name="label_button_login">Login</string>
    <string name="label_home">Home</string>

    <!--Format-->
    <string name="date_format">dd.MM.yyyy</string>
    <string name="time_format">kk:mm</string>

    <!--Description-->
    <string name="description_create_note">create note</string>
    <string name="description_button_create">button create new note</string>
    <string name="description_button_remove">button remove note </string>
    <string name="content_description_search">search for the item</string>
    <string name="more">more</string>
    <string name="content_description_more">"show more "</string>
    <string name="description_home">return home</string>
    <string name="description_return">return</string>
    <string name="description_user_avatar">user_avatar</string>
    <string name="M_empty_note">Note is empty</string>
</resources>