<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/appbar_search"
        android:contentDescription="@string/content_description_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/label_search"
        app:showAsAction="ifRoom" />

    <item
        android:icon="@drawable/ic_baseline_more_vert_24"
        android:title="@string/more"
        app:showAsAction="ifRoom">
        <menu app:showAsAction="ifRoom">
            <item
                android:id="@+id/appbar_change_layout_manager"
                android:contentDescription="@string/label_grid"
                android:icon="@drawable/ic_baseline_view_module_24"
                android:title="@string/label_grid" />

            <item
                android:id="@+id/appbar_change_style"
                android:contentDescription="@string/style"
                android:icon="@drawable/ic_baseline_style_24"
                android:title="@string/style" />
        </menu>
    </item>

</menu>