<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_change_layout"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_view_module_24"
        android:title="@string/label_grid"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:checkable="false"
        android:checked="false"
        android:enabled="false"
        android:title="@string/add_note"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_search"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/label_search"
        app:actionViewClass="com.google.android.material.card.MaterialCardView"
        app:showAsAction="withText" />

</menu>